# Code_Crush

example/src/: channel_basic.rs  main.rs
search-core/: Cargo.toml  readme.md
search-core/.cursor/rules/: rustcommandrule.mdc  rustrules.mdc
search-core/docs/: README.md  모듈-상세-분석.md  의존성-및-빌드-설정.md  코드-흐름-및-데이터-구조.md  프로젝트-구조.md
search-core/src/: command.rs  lib.rs  main.rs  matcher.rs  repls.rs  search.rs  search_dir.rs  searcher.rs  types.rs
search-core/test_data/: sample1.txt  sample2.txt
search-core/test_data/subdir/: nested.txt
